# dataconstructors.github.io

./: .pre-commit-config.yaml  CNAME  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: CNAME  contact.es.md  contact.md  index.en.md  index.es.md  index.md  team.en.md  team.es.md  team.md
docs/projects/: index.en.md  index.es.md
overrides/: main.html
